<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.christianquintero.app5.modulo5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/form"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textStyle="italic|bold"
                    android:id="@+id/tit"/>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@color/Green"></LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log"
                        android:layout_marginLeft="30dp"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:gravity="center"
                        android:id="@+id/loggin"
                        android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pas"
                        android:layout_marginLeft="30dp"
                        android:textSize="15dp"
                        android:textStyle="bold"/>
                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:gravity="center"
                        android:id="@+id/password"
                        android:inputType="numberPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rep"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginLeft="25dp"/>
                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:gravity="center"
                        android:id="@+id/password2"
                        android:inputType="numberPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@color/Green"></LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/co"
                        android:textSize="15dp"
                        android:layout_marginLeft="30dp"
                        android:textStyle="bold"/>
                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:gravity="center"
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/con"
                        android:textSize="15dp"
                        android:layout_marginLeft="30dp"
                        android:textStyle="bold"/>
                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="center"
                        android:id="@+id/contrasena"
                        android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/se"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"/>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical"
                        android:id="@+id/grupo">
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/m"
                                android:id="@+id/masculino"/>
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/f"
                                android:id="@+id/femenino"/>
                    </RadioGroup>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@color/Green"></LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fNac"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:spinnersShown="true"
                    android:calendarViewShown="false"
                    android:id="@+id/fNacimiento">
                </DatePicker>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@color/Green"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lNac"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_marginLeft="30dp"/>

                    <Spinner
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/ciudades">
                    </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hob"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vid"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/videojuegos"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mus"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/musica"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/depor"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/deportes"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dor"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/dormir"/>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@color/Green"></LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ac"
                        android:onClick="registrar"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@color/Green"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/informacion"
                        android:textSize="15dp"
                        android:textStyle="bold|italic"
                        />
            </LinearLayout>


    </LinearLayout>

</ScrollView>
